fix left alignment between team summary and services

--- a/_sass/pages/team/_team-summary.scss
+++ b/_sass/pages/team/_team-summary.scss
@@ -36,8 +36,7 @@
 }
 
 .team-summary-large {
-  padding: 30px;
-  border-radius: 3px;
+  margin-bottom: 30px;
   .team-image {
     height: 160px;
     width: 160px;
